# NativeAnimationFrameworkSF

./: .gitignore  .gitmodules  COPYING  Plugin.code-workspace
AnimationOptimizer/: CMakeLists.txt  CMakePresets.json  vcpkg.json
AnimationOptimizer/cmake/: Plugin.h.in
AnimationOptimizer/src/: PCH.h  main.cpp
AnimationOptimizer/src/Animation/: Ozz.h
AnimationOptimizer/src/Serialization/: GLTFExport.cpp  GLTFImport.cpp  GLTFImport.h
AnimationOptimizer/src/Settings/: Settings.cpp  Settings.h
Blender/: naf_export_helper.py  rotate_armature_rest_pose.py
CreationKit/Scripts/Source/: NAF.psc
Plugin/: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg.json
Plugin/src/: PCH.h  main.cpp
Plugin/src/API/: API_External.h  API_Internal.cpp  API_Internal.h  CCF_API.h
Plugin/src/Animation/: Easing.h  FileID.cpp  FileID.h  FileManager.cpp  FileManager.h  Generator.cpp  Generator.h  Graph.cpp  Graph.h  GraphManager.cpp  GraphManager.h  IAnimationFile.cpp  IAnimationFile.h  IKTwoBoneData.cpp  IKTwoBoneData.h  Interpolation.cpp  Interpolation.h  MorphAnimation.cpp  MorphAnimation.h  Node.cpp  Node.h  Ozz.cpp  Ozz.h  PoseCache.cpp  PoseCache.h  Sequencer.cpp  Sequencer.h  SyncInstance.cpp  SyncInstance.h  Timeline.h  Transform.cpp  Transform.h
Plugin/src/Animation/Face/: Manager.cpp  Manager.h
Plugin/src/Animation/Procedural/: PActorNode.cpp  PActorNode.h  PAdditiveBlendNode.cpp  PAdditiveBlendNode.h  PBasePoseNode.cpp  PBasePoseNode.h  PBlend1DNode.cpp  PBlend1DNode.h  PFixedValueNode.cpp  PFixedValueNode.h  PFullAnimationNode.cpp  PFullAnimationNode.h  PGraph.cpp  PGraph.h  PInternalCacheReleaseNode.cpp  PInternalCacheReleaseNode.h  PLimitROCNode.cpp  PLimitROCNode.h  PNode.cpp  PNode.h  POneBoneIKNode.cpp  POneBoneIKNode.h  PSmoothValNode.cpp  PSmoothValNode.h  PSmoothedRandNode.cpp  PSmoothedRandNode.h  PSpringBoneNode.cpp  PSpringBoneNode.h  PStaticPoseNode.cpp  PStaticPoseNode.h  PTransformRangeNode.cpp  PTransformRangeNode.h  PTwoBoneIKAdjustNode.cpp  PTwoBoneIKAdjustNode.h  PVariableNode.cpp  PVariableNode.h  SimpleNodes.cpp
Plugin/src/Commands/: Commands.cpp  Commands.h  NAFCommand.cpp  NAFCommand.h
Plugin/src/Commands/BetterConsole/: NAF_UI.cpp  betterapi.h
Plugin/src/Papyrus/: EventManager.cpp  EventManager.h  NAFScript.cpp  NAFScript.h
Plugin/src/RE/: Events.h  NiAVObject.h  NiCamera.h  NiQuaternion.h  RE.h  TransformsManager.h
Plugin/src/Serialization/: BlendGraphImport.cpp  BlendGraphImport.h  GLTFExport.cpp  GLTFExport.h  GLTFImport.cpp  GLTFImport.h
Plugin/src/Settings/: Settings.cpp  Settings.h  SkeletonDescriptor.cpp  SkeletonDescriptor.h  SkeletonImpl.cpp  SkeletonImpl.h
Plugin/src/Tasks/: Input.cpp  Input.h  MainLoop.cpp  MainLoop.h  SaveLoadListener.cpp  SaveLoadListener.h
Plugin/src/Util/: Event.h  General.cpp  General.h  Math.cpp  Math.h  Ozz.h  String.cpp  String.h  Timing.cpp  Timing.h  Trampoline.cpp  Trampoline.h  VM.cpp  VM.h
